style: ensure dropdown doesnt cause layout shift
This commit adds a `position` property to the `.ix-dropdown-open` class.
This fixes an issue where when the dropdown openned, the layout of the
page would shift.

--- a/frontend/src/styles/SourceSelect.css
+++ b/frontend/src/styles/SourceSelect.css
@@ -30,6 +30,7 @@ ul {
   transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94), linear;
 }
 .ix-dropdown-open {
+  position: absolute;
   opacity: 100%;
   height: auto;
   transition-property: all;
